Fixed responsiveness on mobiles a bit

--- a/style.css
+++ b/style.css
@@ -108,20 +108,21 @@
 .result {
     height: 10vh;
     text-align: center;
-    font-size: 60px;
+    font-size: 50px;
 }
 
 .panel {
-    margin: 40px 40px 40px 0;
+    margin-right: 50px;
     text-align: right;
-    font-size: 30px;
+    font-size: 25px;
 }
 
 
 .score {
     display: flex;
     flex-direction: column;
-    font-size: 36px;
+    font-size: 30px;
+    margin-left: 40px;
 }
 
 
@@ -170,7 +171,16 @@
     }
 }
 
-@media (max-width: 400px) and (orientation: portrait) {
+@media (max-width: 420px) and (orientation: portrait) {
+
+    .text {
+        font-size: 49px;
+    }
+
+    .game {
+        height: 50vh;
+        flex-wrap: wrap;
+    }
 
     .play input {
         height: 9vh;
@@ -185,16 +195,17 @@
         letter-spacing: 1px;
     }
 
+    .panel {
+        margin: 0 0 20px 0;
+    }
+
     .score {
         font-size: 26px;
+        margin: 0;
     }
 
     .result {
         font-size: 30px;
-    }
-
-    .game div {
-        height: 100px;
-        width: 105px;
+        margin-top: 10px;
     }
 }
